welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (nbBiscuit=3)
               ^